messages_et.properties

--- a/AdvancedKitsReloaded/messages_et.properties
+++ b/AdvancedKitsReloaded/messages_et.properties
@@ -3,38 +3,38 @@
 # <                   Language file                    >
 # <               messages_en.properties               >
 # +----------------------------------------------------+
-kitNotFound = &cKit not found.
-noKitPermission = &cYou don''t have the permission for this kit.
-flagNotFound = &cFlag not found.
-notFirework = &cYou need to hold the firework in your hand.
-notEnoughMoney = &cYou don''t have enought money. &7({0})
-notEnoughSpace = &cYou need &f{0}&c space in your inventory.
-playerOnly = &cYou can''t run this command from console.
-kitAlreadyExists = &cThis kit already exists.
-flagSet = &aYou have successfully set &7{0}&a to &7{1}&a for &7{2}&a in &7{3}
+kitNotFound = &cKomplekti ei leitud.
+noKitPermission = &cSul ei ole selle komplekti jaoks volitusi.
+flagNotFound = &cLippu ei leitud.
+notFirework = &cSa pead ilutulestiku käes hoidma.
+notEnoughMoney = &cSul ei ole piisavalt raha. &7({0})
+notEnoughSpace = &cSa vajad &f{0}&c ruumi oma seljakotis.
+playerOnly = &cSeda käsku ei saa kasutada konsoolis.
+kitAlreadyExists = &cSee komplekt on juba loodud.
+flagSet = &aSa oled seadnud &7{0}&a &7{1}&a for &7{2}&a in &7{3}
 flagDelay = &7&l&nDelay between uses\:&r &f{0}
-flagCost = &7&l&nCost\:&r &f{0}
-flagMaxUses = &7&l&nMaximum amount of uses\:&r &f{0}
-flagAmountOfUses = &7&l&nYou can use this kit\:&r &f{0} time(s)
-flagPerUseCost = &7&l&nPer use cost\:&r &f{0}
-flagDisabledWorlds = &7&l&nDisabled in these world(s)\:
-availableFlags = &7Here''s all of the flags\: &f{0}
-successfullyEdited = &aYou have successfully edited &7{0}
-successfullyCreated = &aYou have successfully created &7{0}
+flagCost = &7&l&nMaksab\:&r &f{0}
+flagMaxUses = &7&l&nSuurim kasutajate arv\:&r &f{0}
+flagAmountOfUses = &7&l&nSa saad kasutada komplekti\:&r &f{0} time(s)
+flagPerUseCost = &7&l&nKasutuskorra pealt\:&r &f{0}
+flagDisabledWorlds = &7&l&nKeelatud nendes maailmates\:
+availableFlags = &7Siin on kõik lippud\: &f{0}
+successfullyEdited = &aSuurepäraselt muudetud &7{0}
+successfullyCreated = &aSuurepäraselt loodud &7{0}
 successfullyBought = &aYou have successfully bought\: &7{0}
-successfullyUsed = &aYou have successfully used &7{0}&a\!
-kitView = &aYou''re viewing\: &7{0}
-cantUseWorld = &cYou can''t use this kit in this world.
-cantUseNoMore = &cYou can''t use this kit anymore.
-cantUseDelay = &cYou have to wait &f{0}&cto use this kit again.
-delayImmunity = &aYou have immunity over the delay.
+successfullyUsed = &aSuurepäraselt kasutatud &7{0}&a\!
+kitView = &aSa vaatad\: &7{0}
+cantUseWorld = &cSa ei saa seda komplekti siin maailmas kasutada.
+cantUseNoMore = &cSa ei saa seda komplekti enam kasutada.
+cantUseDelay = &cSa pead ootama &f{0}&cet kasutada seda komplekti uuesti.
+delayImmunity = &aSu ootus on täis.
 moneyLowered=&aYour money was lowered from &7{1}&a to &7{0}&a due to &7{2}
 informations = &f&lInformations
-timeUnitDays = Days
-timeUnitHours = Hours
-timeUnitMinutes = Minutes
-timeUnitSeconds = Seconds
-flagFree = &7&l&nFree
+timeUnitDays = Päev
+timeUnitHours = Tund
+timeUnitMinutes = Minut
+timeUnitSeconds = Sekundit
+flagFree = &7&l&nTasuta
 notValidIcon = &cYou need to hold an item in your hand.
 notValidIcon2 = &cInvalid material.
 alreadyUnlocked = &cYou have already bought this kit. &7({0})
